Overflow fix

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -13,7 +13,11 @@
   height: 56px;
   background-color: var(--cardsbg);
   border-bottom: 1px solid var(--cardsbg);
-  overflow: hidden;
+}
+@media screen and (max-width:576px) {
+  .navbar {
+    overflow: hidden;
+  }
 }
 
 .logo {
